deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: man
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: man
  template:
    metadata:
      labels:
        app.kubernetes.io/name: man
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: nginx
          image: u-root-man:latest
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
