deploy/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: man
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: infra
  hostnames:
    - u-root-man.t.secoder.net
  rules:
    - backendRefs:
        - name: man
          port: 80
          kind: Service
      matches:
        - path:
            type: PathPrefix
            value: /
